# pii_model_cohort

./: .gitignore  README.md  push_to_hf.sh  pyproject.toml
.github/workflows/: ci.yaml
data/processed/: clustering_ml.py  eda.py.bak  eda_code_final_fixed.py  supervized_ml.py
data/raw/: customer_profile_eda_normalization.ipynb  medical_data_raw.ipynb
data/raw/hf/: README.md  data_did.csv
gretel_ai/: gretel_exp.md
pii_personality/: .dockerignore  .gitignore  Dockerfile
pii_personality/data/processed/: eda_code_final_fixed.py
pii_personality/data/processed/PII_Customer_Personality_Analysis/data/: corr_matrix_PII_Customer_Personality_Analysis_correlation_matrix.csv
pii_personality/data/raw/: data_notes.md
pii_personality/data/versions/: 2024_08_25_PII_Customer_Personality_Analysis_v0.1.csv
pii_personality/src/: constants.py  supervized_ml.py
pii_personality/transformer_models/: unsloth_model_colab.ipynb
verida-differential-privacy/data/processed/: customer_profile_marketing.csv
verida-differential-privacy/data/raw/: raw_data.ipynb
verida-differential-privacy/src/: clustering_ml.py  supervized_ml.py
