[tool.poetry]
name = "verida-differential-privacy"
version = "0.1.0"
description = "A demonstration of using the PyTorch differential privacy library and a login DiD"
authors = ["snyata <core@synavate.tech>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
wandb = "^0.17.7"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
datasets = "^2.21.0"
didkit = "^0.3.3"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pip-tools = "^7.4.1"
isort = "^5.13.2"
datasets = "^2.21.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
